--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.6.6",
+    "vue-webix": "^1.3.0",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
